[project]
name = "concurrent_tasks"
version = "1.14.0"
description = "Tools to run asyncio tasks concurrently."
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Gabriel Pajot", email = "gab@lescactus.eu" },
]
urls = { repository = "https://github.com/gpajot/asyncio-concurrent-tasks" }
dependencies = [
    "typing-extensions >=4.10",
]

[tool.poetry]
include = ["concurrent_tasks/py.typed"]
requires-poetry = ">=2"

[tool.poetry.group.test.dependencies]
pytest = "==8.4.1"
pytest-asyncio = "==1.1.0"
pytest-mock = "==3.14.1"
ruff = "==0.12.10"
mypy = "==1.17.1"
pre-commit = "==4.3.0"

[tool.mypy]
check_untyped_defs = true
ignore_missing_imports = true
install_types = true
no_implicit_reexport = true
non_interactive = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff.lint]
select = ["A", "B", "E", "F", "I", "PT"]
ignore = ["E501"]
per-file-ignores = { "__init__.py" = ["F401"] }
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
