[project]
name = "concurrent_tasks"
version = "1.15.1"
description = "Tools to run asyncio tasks concurrently."
license = "MIT"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Gabriel Pajot", email = "gab@lescactus.eu" },
]
urls = { repository = "https://github.com/gpajot/asyncio-concurrent-tasks" }
dependencies = [
    "typing-extensions >=4.10",
]
license-files = ["LICENSE"]

[dependency-groups]
dev = [
    "pytest ==8.4.2",
    "pytest-asyncio ==1.1.0",
    "pytest-mock ==3.15.0",
    "ruff ==0.12.12",
    "mypy ==1.17.1",
    "pre-commit ==4.3.0",
]

[tool.mypy]
check_untyped_defs = true
ignore_missing_imports = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff.lint]
select = ["A", "B", "E", "F", "I", "PT"]
ignore = ["E501"]
per-file-ignores = { "__init__.py" = ["F401"] }

[tool.uv]
build-backend = { module-name = "concurrent_tasks", module-root = "" }

[build-system]
requires = ["uv_build>=0.8.15,<0.9"]
build-backend = "uv_build"
