[project]
name = "concurrent_tasks"
version = "1.17.0"
description = "Tools to run asyncio tasks concurrently."
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Gabriel Pajot", email = "gab@lescactus.eu" },
]
urls = { repository = "https://github.com/gpajot/asyncio-concurrent-tasks" }
dependencies = [
    "typing-extensions >=4.10",
]
license-files = ["LICENSE"]

[dependency-groups]
dev = [
    "pytest ==9.0.2",
    "pytest-asyncio ==1.3.0",
    "pytest-mock ==3.15.1",
    "ruff==0.15.0",
    "pre-commit ==4.5.1",
    "ty==0.0.16",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff.lint]
select = ["A", "B", "E", "F", "I", "PT", "RUF", "UP"]
ignore = ["E501", "RUF001"]
per-file-ignores = { "__init__.py" = ["F401"] }

[tool.uv]
build-backend = { module-name = "concurrent_tasks", module-root = "" }

[tool.ty.rules]
unused-ignore-comment = "warn"

[tool.ty.terminal]
error-on-warning = true

[build-system]
requires = ["uv_build>=0.9.17,<0.10"]
build-backend = "uv_build"
